WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99413
REGRESSION (
r131365
): WidthIterator::advance() is needlessly passed a GlyphBuffer in many cases
https://bugs.webkit.org/show_bug.cgi?id=99413
Summary
REGRESSION (r131365): WidthIterator::advance() is needlessly passed a GlyphBu...
mitz
Reported
2012-10-15 21:56:33 PDT
REGRESSION (
r131365
): WidthIterator::advance() is needlessly passed a GlyphBuffer in many cases
Attachments
Remove the GlyphBuffer* parameter to floadWidthForSimpleText() and make it pass a GlyphBuffer* to advance() only when necessary
(6.07 KB, patch)
2012-10-15 22:03 PDT
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-10-15 22:03:01 PDT
Created
attachment 168850
[details]
Remove the GlyphBuffer* parameter to floadWidthForSimpleText() and make it pass a GlyphBuffer* to advance() only when necessary
mitz
Comment 2
2012-10-15 22:08:40 PDT
Fixed in <
http://trac.webkit.org/r131410
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug